--- a/.gitignore
+++ b/.gitignore
@@ -24888,3 +24888,5 @@ node_modules/.bin/babel
 node_modules/.bin/atob
 node_modules/.bin/ansi-html
 node_modules/.bin/acorn
+node_modules/less-loader/.idea/shelf/Uncommitted_changes_before_update_operation_at_05_10_15_22_25_[Default].patch
+*.patch
