改进了报销重复发票的提示信息

--- a/.gitignore
+++ b/.gitignore
@@ -24889,3 +24889,4 @@ node_modules/zrender/src/zrender.js
 node_modules/zrender/zrender.all.js
 node_modules/less-loader/.idea/shelf/Uncommitted_changes_before_update_operation_at_05_10_15_22_25_[Default].patch
 *.patch
+src/config/env.js
